# raffalib-python

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: clean.bat  conf.py  index.rst  make.bat  make_doctest.bat  make_live.bat  requirements.txt
docs/source/: api.rst  conf.py  examples.rst  index.rst  installation.rst  quickstart.rst
src/raffalib/: KeePassXC.py  ScopusUtils.py  __init__.py  _logutils.py  check_openalex_api_key.py  export_docx.py  itertools.py  list_replace.py  logging.py  make_backup_file.py  mypickle.py  nlp.py  pandas.py  polars.py  preprocess_text_for_rag.py  selenium.py  sqlalchemy.py  tqdm.py
tests/: test_check_openalex.py  test_export_docx.py  test_itertools.py  test_list_replace.py  test_logging.py  test_logutils.py  test_mypickle.py  test_pandas.py  test_polars.py  test_scopus.py  test_selenium.py  test_sqlalchemy.py  test_tqdm.py
