[project]
name = "raffalib"
version = "0.1"
description = "My Python library"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE.txt"]
keywords = ["pandas", "polars"]
authors = [
    { name = "Raffaele Mancuso", email = "raffaelemancuso532@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "humanize>=4.15.0",
    "natsort>=8.4.0",
    "polars>=1.38.1",
    "polars-config-meta>=0.3.1",
    "rich>=14.2.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
docs = ["sphinx"]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.11.0",
]
